# obfuscator

./: CMakeLists.txt  entry.cpp  injector.cpp  makefile  readme.md  test.cpp  test_backup.cpp  vcpkg.json
cryptor/: cryptor.h
payload/: entry.cpp  init.cpp  main_override.cpp  payload.cpp  payload.h  pseudoconsole.cpp  reverse-shell.cpp  server.cpp  util.cpp
src/: cryptor.cpp  injector.cpp  main.cpp
